feat: add badge and tag editing feature (#114)
